--- a/.github/workflows/run-sync.yml
+++ b/.github/workflows/run-sync.yml
@@ -1,23 +1,33 @@
-name: Run Python Script Hourly
+name: Run Sync Hourly
 
 on:
   schedule:
     - cron: '0 * * * *'  # כל שעה עגולה
-  workflow_dispatch:     # מאפשר להריץ ידנית גם כן
+  workflow_dispatch:     # מאפשר גם להריץ ידנית
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
+
     env:
       JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Install dependencies
-        run: pip install -r requirements.txt || true
-      - name: Run script
-        run: python sync.py
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run jira_fetch.py (to generate hp_mapping.json)
+        run: python jira_fetch.py
+
+      - name: Run sync script
+        run: python sync.py
